# narocheckerbot

./: .gitignore  Readme.md  bot.py  pyproject.toml
narocheckerbot/: apigateway_manager.py  bot.py  checker.py  config_manager.py  naro.py  naro18_api_gateway.py  naro_api_gateway.py  naro_blog_api_gateway.py  naro_blog_configuration.py  naro_configuration.py  novel_configration.py  webapi_gateway.py
sample/: config.yaml
tests/: test_narocheckerbot.py
