[tool.poetry]
name = "narocheckerbot"
version = "0.1.0"
description = ""
authors = ["chika <fumifumibot2323@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.17.9"
py-cord = "2.0.0b4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.902"
isort = "^5.8.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
